...
        }}
      />
      <Tabs.Screen
        name="mehr"
        options={{
          title: "Mehr",
          tabBarButtonTestID: "tab-more",
          tabBarIcon: ({ color, size }) => <Ionicons color={color} name="ellipsis-horizontal" size={size} />
        }}
      />
      <Tabs.Screen
        name="reviereinrichtungen"
        options={{
...
